# ZK-Computational-Graph-Builder

./: Cargo.toml  README.md  config.toml
src/: builder.rs  builder_deprecated.rs  builder_single_thread.rs  field.rs  graph_builder.rs  lib.rs
tests/: benchmarks.rs  builder_tests.rs  field_tests.rs  graph_tests.rs  integ.rs  unit.rs
