[package]
name = "takehome"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11"
lazy_static = "1.4.0"
bincode = { version = "1.3.3" }
log = "0.4"
env_logger = "0.10"
getset = "0.1.2"
rayon = "1.8.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"