[package]
name = "takehome"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11"
getset = "0.1.2"
rayon = "1.8.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.11.1"

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 3  # Maximum optimizations

[profile.release]
opt-level = 3  # Maximum optimizations

[env]
RUST_TEST_THREADS = "8"
RAYON_NUM_THREADS = "8"