[package]
name = "takehome"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
parking_lot = "0.12.1"
rayon = "1.8.1"
log = "0.4"
env_logger = "0.11.5"
rand = "0.8"

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3